--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,12 @@ sup {
 }
 
 a {
-  color: #f4623a;
+  color: #FAA8A8;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #d6370c;
+  color: #FFC6C3;
   text-decoration: underline;
 }
 
